# atomwrite

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.pt-BR.md  CHANGELOG.md  CHANGELOG.pt-BR.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Cargo.toml  INTEGRATIONS.md  INTEGRATIONS.pt-BR.md  PRIVACY.md  PRIVACY.pt-BR.md  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  audit.toml  build.rs  llms-full.txt  llms.pt-BR.txt  llms.txt
.github/workflows/: ci.yml
benches/: hash_benchmark.rs  read_benchmark.rs
docs/: AGENTS.md  AGENTS.pt-BR.md  COOKBOOK.md  COOKBOOK.pt-BR.md  CROSS_PLATFORM.md  CROSS_PLATFORM.pt-BR.md  HOW_TO_USE.md  HOW_TO_USE.pt-BR.md  INSTALL.md  INSTALL.pt-BR.md  MIGRATION.md  MIGRATION.pt-BR.md  TESTING.md  TESTING.pt-BR.md
docs/adr/: ADR-0.1.35-g035-env-detect-allowlist.md  ADR-0.1.35-p3-fuzzy-reject.md  ADR-0.1.35-simd-memchr.md
docs/decisions/: 0020-wal-sidecar.md  0023-g114-wal-consultive.md  0028-g119-wal-cleanup-intelligent.md  0028-g119-wal-cleanup-intelligent.pt-BR.md  0031-g121-path-resolution-helper.md  0031-g121-path-resolution-helper.pt-BR.md  0033-v0-1-19-exit-code-naming-drift-consolidation.md  0033-v0-1-19-exit-code-naming-drift-consolidation.pt-BR.md  0034-help-driven-testing-anti-pattern.md  0034-help-driven-testing-anti-pattern.pt-BR.md  0035-write-intention-guards.md  0035-write-intention-guards.pt-BR.md  0036-edit-partial-coverage.md  0036-edit-partial-coverage.pt-BR.md  0037-global-locale-rename.md  0037-global-locale-rename.pt-BR.md  0038-backup-cumprido-deleta.md  0038-backup-cumprido-deleta.pt-BR.md  0040-prune-backups-subcommand.md  0040-prune-backups-subcommand.pt-BR.md  0042-backup-by-default.md  0042-backup-by-default.pt-BR.md  0043-shrink-guard.md  0043-shrink-guard.pt-BR.md  0048-unified-backup-opts.md  0048-unified-backup-opts.pt-BR.md  0049-live-config-plumbing.md  0049-live-config-plumbing.pt-BR.md  0050-stdin-tty-guard.md  0050-stdin-tty-guard.pt-BR.md  0051-v0-1-29-gap-close-and-docs.md  0052-v0-1-30-residual-agent-contract.md  0053-clap-rules-audit-exceptions.md  0053-clap-rules-audit-exceptions.pt-BR.md  0054-v0-1-34-oneshot-fuzzy-timeout.md  0054-v0-1-34-oneshot-fuzzy-timeout.pt-BR.md  README.md
docs/schemas/: README.md  agent-surface.schema.json  best-candidate.schema.json  cancelled-event.schema.json  codemod.schema.json  commands.schema.json  completions.schema.json  delete-output.schema.json  doctor.schema.json  edit-output.schema.json  error-output.schema.json  locale.schema.json  progress-event.schema.json  recipe-result.schema.json  replace-result.schema.json  semantic-merge.schema.json  semantic-search.schema.json  sparse.schema.json  wal-stats-output.schema.json  watch.schema.json  write-output.schema.json  write-risk-assessment.schema.json
locales/: en.toml  pt-BR.toml
recipes/: edit-loop-syntax-check.yaml  search-replace-verify.yaml
scripts/: regen-schemas.sh
skill/atomwrite-en/: SKILL.md
skill/atomwrite-en/evals/: queries.json
skill/atomwrite-pt/: SKILL.md
skill/atomwrite-pt/evals/: queries.json
skills/atomwrite-en/: SKILL.md
skills/atomwrite-en/evals/: queries.json
skills/atomwrite-pt/: SKILL.md
skills/atomwrite-pt/evals/: queries.json
src/: atomic.rs  binary_detect.rs  checksum.rs  cli.rs  cli_args.rs  concurrency.rs  concurrency_walk.inc.rs  config.rs  constants.rs  env_detect.rs  error.rs  file_io.rs  fuzzy.rs  lib.rs  locale.rs  locale_tests.inc.rs  lock.rs  main.rs  ndjson_types.rs  output.rs  path_safety.rs  platform.rs  runtime.rs  runtime_cli.inc.rs  schema_dispatch.inc.rs  signal.rs  storage.rs  syntax_check.rs  syntax_check_stub.rs  wal.rs
src/atomic/: inplace.rs  mod.rs  persist_retry.rs  rename_path.rs  syntax_heuristic.rs  tests.inc.rs  time_fmt.rs  types.rs  write.rs
src/cli_args/: header.inc.rs  mod.rs  part0.inc.rs  part1.inc.rs  part1b.inc.rs  part2.inc.rs  part2b.inc.rs
src/commands/: agent_surface.rs  apply.rs  backup.rs  batch.rs  calc.rs  case.rs  codemod.rs  command_tree.rs  copy.rs  count.rs  del.rs  delete.rs  diff.rs  doctor.rs  edit.rs  edit_loop.rs  extract.rs  get.rs  hash.rs  list.rs  locale_cmd.rs  mod.rs  move.rs  outline.rs  outline_stub.rs  prune_backups.rs  query.rs  query_stub.rs  read.rs  recipe.rs  recipe_run.inc.rs  regex_gen.rs  replace.rs  replace_helpers.inc.rs  replace_run.inc.rs  rollback.rs  scope.rs  scope_stub.rs  search.rs  search_helpers.inc.rs  (+11 more)
src/commands/batch/: mod.rs  ops.inc.rs  run.inc.rs  schema.inc.rs  txn.inc.rs
src/commands/edit/: apply.inc.rs  lines.inc.rs  mod.rs  multi.inc.rs  pairs.inc.rs  single.inc.rs
src/commands/scope/: mod.rs  queries.inc.rs  scope_actions.inc.rs  (+1 more)
src/error/: class.inc.rs  error_json.inc.rs  impl_methods.inc.rs  mod.rs  suggest.inc.rs  tests.inc.rs  variants.inc.rs
src/fuzzy/: cascade.inc.rs  mod.rs  normalize.rs  one_pass.inc.rs  rank.inc.rs  replace_lines.inc.rs  score.rs  strategies.inc.rs  tests.inc.rs  types.inc.rs  util.rs  windows.rs
src/ndjson/: mod.rs  part0.inc.rs  part1.inc.rs  part2.inc.rs  tests.inc.rs
src/wal/: heal.rs  heuristics.rs  journal.rs  mod.rs  policy.rs  stats.rs  tests.inc.rs
tests/: cli_batch.rs  cli_case.rs  cli_clap_debug_assert.rs  cli_concurrency.rs  cli_delete.rs  cli_e2e_v0135.rs  cli_edit.rs  cli_hash.rs  cli_list.rs  cli_oneshot_timeout_config.rs  cli_read.rs  cli_search.rs  cli_v0121_edit_loop.rs  cli_v0121_help_driven.rs  cli_v0121_prune_backups.rs  cli_v0123_backup_default.rs  cli_v0123_shrink_guard.rs  cli_v0128_backup_matrix.rs  cli_v0128_batch_backup.rs  cli_v0128_config_defaults.rs  cli_v0128_edit_stdin_guard.rs  cli_v0129_fuzzy_replace.rs  cli_v012_batch4_regressions.rs  cli_v0130_agent_contract.rs  cli_v0133_oneshot_fuzzy.rs  cli_wal.rs  cli_write.rs  cross_compile_check.rs  locale_parity.rs  proptest_fuzzy.proptest-regressions  proptest_fuzzy.rs  proptest_v0121_backup_delete.rs  signal_test.rs  tracing_test.rs
tests/snapshots/: snapshot_write__edit_output_structure.snap  snapshot_write__replace_result_structure.snap  snapshot_write__write_output_structure.snap
